# ora

./: .project  Cargo.toml
app/: Cargo.toml
app/src/: lib.rs
chat/: Cargo.toml
chat/src/: lib.rs
chat/src/connection/: mod.rs
chat/src/friend/: mod.rs
chat/src/logs/: mod.rs
chat/src/message/: content.rs  dh.rs  encrypt.rs  mod.rs  sha256.rs
chat/src/server_structure/: mod.rs
chat/src/user/: mod.rs
src/: main.rs
tests/: Cargo.toml
tests/src/encryption/: dh.rs
