[package]
name = "ora"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["chat", "tests", "app"]


[workspace.dependencies]
rand = { version = "*", features = ["std"] }
iced = "*"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
tokio-tungstenite = "*"
futures-util = "*"
uuid = { version = "*", features = ["v4", "serde"] }
num-bigint = { version = "*", features = ["serde"] }
num-traits = "*"
rand_distr = "0.5.1"

#~~~~~~~~~~~~~~~~~~~~~~~~#

[dependencies]
tests = { path = "tests" }
chat = { path = "chat" }
app = { path = "app" }

# [[bin]]
# name = "client"
# path = "src/client/mod.rs"
